# github-conventional-commit-enforcer

./: .commit-enforcer.json  .commitlintrc.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
scripts/: install.sh  test_integration.sh  validate_commit_msg.py
tests/: test_validate.py
